--- a/src/components/GridItem/GridItem.module.css
+++ b/src/components/GridItem/GridItem.module.css
@@ -4,6 +4,7 @@
     border-radius: 10px;
     display: flex;
     justify-content: center;
+    align-items: center;
     flex-direction: column;
     padding: 20px;
 }
@@ -27,4 +28,9 @@
 .gridInfo {
     font-size: 12px;
     margin-top: 14px;
+}
+
+.yourImc {
+    font-size: 17px;
+    margin: 10px 0 50px 0;
 }
