--- a/src/App.module.css
+++ b/src/App.module.css
@@ -42,6 +42,10 @@ header .headerContainer {
     outline: 0;
 }
 
+.container .leftSide input:disabled {
+    opacity: .5;
+}
+
 .container .leftSide button {
     background-color: #227c9d;
     color: #fff;
@@ -56,6 +60,10 @@ header .headerContainer {
 
 .container .leftSide button:hover {
     opacity: .8;
+}
+
+.container .leftSide button:disabled {
+    opacity: .5;
 }
 
 .container .rightSide {
